fixed logo blur on mobile

--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -62,3 +62,10 @@
   color: #fff;
   transform: translateY(-3px);
 }
+
+/* Mobile */
+@media (max-width: 760px) {
+  .logo {
+    width: 20rem;
+  }
+}
